@@ -1,3 +1,12 @@
+Tue Sep  8 15:47:44 UTC 2009  Steven Stallion  <stallions@ociweb.com>
+
+        * dds/DCPS/ZeroCopySeq_T.h:
+        * dds/DCPS/ZeroCopySeq_T.inl:
+
+          Refactored DDS_Vector to ZeroCopyVector; better reflects intention
+          and eliminates use of a DDS prefix (causes conflicts when run against
+          style.sh)
+
 Fri Sep  4 20:03:59 UTC 2009  Steven Stallion  <stallions@ociweb.com>
 
         * tools/copyright:
